# physic-engine

./: CMakeLists.txt
.github/workflows/: backend.yml
backend/include/: network.hpp
backend/include/physics/: Base.hpp  Colliders.hpp  Events.hpp  Forces.hpp  Math.hpp  PhysicsEngine.hpp  RigidBody.hpp
backend/src/: main.cpp  network.cpp
backend/src/physics/: Colliders.cpp  Events.cpp  Forces.cpp  Math.cpp  PhysicsEngine.cpp  RigidBody.cpp
backend/tests/: test_collider.cpp  test_math.cpp
common/include/: configs.hpp
frontend/src/: client.cpp  client.h
